--- a/JavaScript/JavaScriptOdev3/index.html
+++ b/JavaScript/JavaScriptOdev3/index.html
@@ -23,7 +23,7 @@
           <h2>Asian Kitchen's Menu</h2>
         </div>
         <!-- filter buttons-->
-        <div class="btn-container">
+        <div class="btn-container container mx-auto">
           <span class="btn btn-outline-dark ms-3 all">
             All
           </span>
